#68 - [2.0.0] - Unit test goal for 100% coverage